# david-math-py

./: .gitignore  .prettierignore  HISTORY.md  README.md  pyproject.toml  pypyr-config.yaml  requirements.all.txt  requirements.in  requirements.in.txt  requirements.pipx.txt  requirements.release.txt  requirements.txt  requirements.uv.all.txt  requirements.uv.in.txt  requirements.uv_tool.txt  ruff.toml  test-results.xml
.github/workflows/: always.yml
features/grades/02/: Additions 01.feature
jupyter/Beebe/Grades/02/: Additions 01.ipynb
jupyter/GeeksForGeeks/: matplotlib.ipynb
jupyter/RealPython/: Hello Jupyter.ipynb  styling.ipynb
jupyter/jupyter-notebook-introduction/: Hello Jupyter.ipynb  styling.ipynb
pipelines/: build.yaml  clean.yaml  dev.yaml  lint.yaml  qa.yaml  style.yaml  test.yaml
scripts/: install.ba.sh  setup.ba.sh
scripts/ipykernel/: install.ba.sh
scripts/jupyter/: nbconvert.ba.sh
scripts/jupyter/notebook/: run.ba.sh
scripts/pip/: upgrade.ba.sh
scripts/pipx/: install.ba.sh
scripts/pyenv/: install.ba.sh
scripts/uv/: sync.ba.sh
scripts/uv/pip/: compile.ba.sh
scripts/uv/tool/: install.ba.sh
tests/step_defs/grades/02/: test__Additions_01.py
