[project]
name = "david-math-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "SEE LICENSE.md"
requires-python = ">=3.12.7"

[project.optional-dependencies]
dev = [
    "pyhamcrest>=2.1.0",
    "pytest>=8.3.4",
    "pytest-bdd>=7.3.0,<8.0.0",
    "pytest-cov>=6.0.0",
]
